--- a/.github/workflows/build-rn-apk.yml
+++ b/.github/workflows/build-rn-apk.yml
@@ -17,21 +17,28 @@ jobs:
         with:
           node-version: 20
 
-      - name: Setup Java (React Native needs Java 17)
+      - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
 
-      - name: Install Dependencies
-        run: npm install
+      - name: Create React Native Project Structure
+        run: |
+          # Haddii uusan jirin folder-ka android, abuur mid cusub oo tijaabo ah
+          if [ ! -d "android" ]; then
+            echo "Folder-ka Android lama helin, hadda ayaan abuurayaa..."
+            npx react-native@latest init TijaaboApp --directory . --skip-install --version 0.73.0
+          fi
+          
+          # Hadda ku shub maktabadaha (Dependencies)
+          npm install
 
       - name: Build Android Debug APK
         run: |
-          # Haddii uusan jirin folder-ka android, waxaad u baahan tahay inaad marka hore 
-          # computer-kaaga kaga sameyso 'npx react-native init'
           cd android
           chmod +x gradlew
+          # Waxaan dhisaynaa APK-ga
           ./gradlew assembleDebug --no-daemon
 
       - name: Upload APK
