--- a/.github/workflows/build-rn-apk.yml
+++ b/.github/workflows/build-rn-apk.yml
@@ -23,22 +23,26 @@ jobs:
           distribution: 'zulu'
           java-version: '17'
 
-      - name: Create React Native Project Structure
+      - name: Initialize React Native Structure
         run: |
-          # Haddii uusan jirin folder-ka android, abuur mid cusub oo tijaabo ah
+          # 1. Haddii uusan jirin folder-ka android, hadda ayaan abuureynaa annagoo isticmaaleyna CLI-ga cusub
           if [ ! -d "android" ]; then
-            echo "Folder-ka Android lama helin, hadda ayaan abuurayaa..."
-            npx react-native@latest init TijaaboApp --directory . --skip-install --version 0.73.0
+            echo "Folder-ka Android lama helin, hadda ayaan abuurayaa nidaamka..."
+            # Waxaan isticmaaleynaa amarka cusub ee ay soo jeediyeen
+            npx @react-native-community/cli init TijaaboApp --directory . --skip-install
           fi
-          
-          # Hadda ku shub maktabadaha (Dependencies)
+
+      - name: Install Dependencies
+        run: |
+          # Waxaan hubineynaa in package.json uu jiro ka hor intaan npm install la dhihin
           npm install
 
       - name: Build Android Debug APK
         run: |
           cd android
+          # Sii ogolaansho gradlew
           chmod +x gradlew
-          # Waxaan dhisaynaa APK-ga
+          # Dhis APK-ga (Kani wuxuu qaadan karaa 10-15 daqiiqo)
           ./gradlew assembleDebug --no-daemon
 
       - name: Upload APK
