--- a/package.json
+++ b/package.json
@@ -1,11 +1,130 @@
 {
-  "name": "shaqohub-rn",
+  "name": "shacohub",
   "version": "1.0.0",
+  "description": "A job search platform for Somali youth to find verified online job opportunities",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "android": "react-native run-android"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject",
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "build:android": "expo build:android",
+    "build:ios": "expo build:ios",
+    "prebuild": "expo prebuild",
+    "clean": "rm -rf node_modules && rm -rf package-lock.json && rm -rf yarn.lock",
+    "clean:cache": "expo start -c",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "expo": "~50.0.0",
+    "expo-constants": "~15.4.0",
+    "expo-linking": "~6.2.0",
+    "expo-status-bar": "~1.11.0",
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-native": "0.73.6",
+    "react-native-safe-area-context": "4.8.0",
+    "react-native-screens": "~3.29.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.10"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.4.1",
+    "@types/react": "~18.2.45",
+    "@types/react-native": "~0.73.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.19.0",
+    "eslint-config-expo": "~5.0.3",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.1.0",
+    "husky": "^8.0.3",
+    "jest": "^29.2.1",
+    "jest-expo": "~50.0.3",
+    "lint-staged": "^15.0.2",
+    "prettier": "^3.0.3",
+    "react-test-renderer": "18.2.0",
+    "typescript": "^5.3.0"
+  },
+  "peerDependencies": {
+    "react": "18.2.0",
+    "react-native": "0.73.6"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|@supabase/.*)"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
+    "collectCoverageFrom": [
+      "**/*.{js,jsx,ts,tsx}",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/jest.setup.js"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
+    ]
+  },
+  "private": true,
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0",
+    "yarn": ">=1.22.0"
+  },
+  "keywords": [
+    "job-search",
+    "somali",
+    "freelance",
+    "online-jobs",
+    "react-native",
+    "expo",
+    "mobile-app"
+  ],
+  "author": {
+    "name": "ShaqoHub Team",
+    "email": "contact@shacohub.com",
+    "url": "https://shacohub.com"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/shaqohub.git"
+  },
+  "bugs": {
+    "url": "https://github.com/your-username/shaqohub/issues"
+  },
+  "homepage": "https://shacohub.com",
+  "funding": {
+    "type": "individual",
+    "url": "https://github.com/sponsors/your-username"
   }
 }
