--- a/.github/workflows/build-rn-apk.yml
+++ b/.github/workflows/build-rn-apk.yml
@@ -1,134 +1,57 @@
-name: Android Build APK
+name: Simple Android Build
 
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-  workflow_dispatch: # Allows manual triggering
-
-env:
-  NODE_VERSION: '18'
-  JAVA_VERSION: '17'
+  workflow_dispatch:
 
 jobs:
-  build-android:
+  build:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      
+    - uses: actions/checkout@v4
+    
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-        cache-dependency-path: 'package-lock.json'
+        node-version: '18'
         
-    - name: Setup Java JDK
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: ${{ env.JAVA_VERSION }}
-        
-    - name: Create package-lock.json if missing
+    - name: Generate package files
       run: |
-        if [ ! -f "package-lock.json" ]; then
-          echo "Creating package-lock.json..."
-          npm init -y
-          echo '{
-            "name": "shaqohub",
-            "version": "1.0.0",
-            "private": true,
-            "scripts": {
-              "start": "expo start",
-              "android": "expo start --android",
-              "ios": "expo start --ios",
-              "web": "expo start --web"
-            },
-            "dependencies": {
-              "expo": "~50.0.0",
-              "expo-linear-gradient": "~12.5.0",
-              "expo-status-bar": "~1.11.0",
-              "react": "18.2.0",
-              "react-native": "0.73.0",
-              "@expo/vector-icons": "^14.0.0",
-              "@react-native-async-storage/async-storage": "1.21.0",
-              "@supabase/supabase-js": "^2.39.0",
-              "react-native-safe-area-context": "4.8.0",
-              "react-native-url-polyfill": "^2.0.0",
-              "react-native-screens": "~3.29.0",
-              "react-native-gesture-handler": "~2.14.0"
-            },
-            "devDependencies": {
-              "@babel/core": "^7.20.0"
-            }
-          }' > package.json
-          npm install
-        fi
-        
-    - name: Install dependencies
-      run: npm ci --legacy-peer-deps
-      
-    - name: Install Expo CLI globally
-      run: npm install -g expo-cli@latest
-      
-    - name: Install EAS CLI
-      run: npm install -g eas-cli@latest
-      
-    - name: Check if App.js exists
-      run: |
-        if [ ! -f "App.js" ]; then
-          echo "App.js not found, creating default App.js..."
-          echo 'import React from "react";
-          import { View, Text, StyleSheet } from "react-native";
-
-          export default function App() {
-            return (
-              <View style={styles.container}>
-                <Text style={styles.text}>ShaqoHub App - Building...</Text>
-              </View>
-            );
-          }
-
-          const styles = StyleSheet.create({
-            container: {
-              flex: 1,
-              backgroundColor: "#fff",
-              alignItems: "center",
-              justifyContent: "center",
-            },
-            text: {
-              fontSize: 20,
-              fontWeight: "bold",
-            },
-          });' > App.js
-        fi
-        
-    - name: Create eas.json configuration
-      run: |
-        cat > eas.json << 'EOF'
+        # Create minimal package.json
+        cat > package.json << 'EOF'
         {
-          "cli": {
-            "version": ">= 3.0.0"
+          "name": "shaqohub",
+          "version": "1.0.0",
+          "main": "node_modules/expo/AppEntry.js",
+          "scripts": {
+            "start": "expo start",
+            "android": "expo start --android",
+            "ios": "expo start --ios",
+            "web": "expo start --web"
           },
-          "build": {
-            "development": {
-              "developmentClient": true,
-              "distribution": "internal"
-            },
-            "preview": {
-              "android": {
-                "buildType": "apk"
-              }
-            },
-            "production": {}
-          }
+          "dependencies": {
+            "expo": "^50.0.0",
+            "expo-linear-gradient": "^12.5.0",
+            "react": "18.2.0",
+            "react-native": "0.73.0"
+          },
+          "private": true
         }
         EOF
         
-    - name: Create app.json configuration
+        # Create package-lock.json
+        npm install
+        
+    - name: Check App.js
+      run: |
+        if [ ! -f "App.js" ]; then
+          echo "Error: App.js not found in repository!"
+          echo "Please make sure you have App.js in your project root."
+          exit 1
+        fi
+        echo "App.js found, continuing..."
+        
+    - name: Create app.json
       run: |
         cat > app.json << 'EOF'
         {
@@ -136,111 +59,39 @@ jobs:
             "name": "ShaqoHub",
             "slug": "shaqohub",
             "version": "1.0.0",
-            "orientation": "portrait",
-            "icon": "./assets/icon.png",
-            "userInterfaceStyle": "light",
-            "splash": {
-              "image": "./assets/splash.png",
-              "resizeMode": "contain",
-              "backgroundColor": "#ffffff"
-            },
-            "assetBundlePatterns": [
-              "**/*"
-            ],
-            "ios": {
-              "supportsTablet": true
-            },
+            "platforms": ["android"],
             "android": {
-              "adaptiveIcon": {
-                "foregroundImage": "./assets/adaptive-icon.png",
-                "backgroundColor": "#ffffff"
-              },
               "package": "com.shaqohub.app"
-            },
-            "web": {
-              "favicon": "./assets/favicon.png"
             }
           }
         }
         EOF
         
-    - name: Create assets directory
+    - name: Install Expo CLI
+      run: npm install -g expo-cli
+      
+    - name: Show build instructions
       run: |
-        mkdir -p assets
-        # Create placeholder assets
-        echo "Placeholder icon" > assets/icon.png
-        echo "Placeholder splash" > assets/splash.png
-        echo "Placeholder adaptive icon" > assets/adaptive-icon.png
-        echo "Placeholder favicon" > assets/favicon.png
-        
-    - name: Install Expo dependencies
-      run: |
-        npx expo install --check || true
-        npx expo install expo-linear-gradient --yes || npm install expo-linear-gradient --save
-        npx expo install react-native-safe-area-context --yes || npm install react-native-safe-area-context --save
-        npx expo install react-native-screens --yes || npm install react-native-screens --save
-        npx expo install react-native-gesture-handler --yes || npm install react-native-gesture-handler --save
-        npx expo install @react-native-async-storage/async-storage --yes || npm install @react-native-async-storage/async-storage --save
-        
-    - name: Build with EAS (if token provided)
-      if: env.EXPO_TOKEN != ''
-      run: |
-        eas login --token ${{ secrets.EXPO_TOKEN }}
-        eas build --platform android --profile preview --non-interactive --local
-      env:
-        EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
-        
-    - name: Build with expo build (fallback)
-      if: env.EXPO_TOKEN == ''
-      run: |
-        echo "Building APK without EAS token..."
-        # Create android directory structure
-        mkdir -p android/app/src/main/assets
-        mkdir -p android/app/src/main/res
-        
-        # Generate bundle
-        npx expo export --platform android --dev false --output-dir android-build
-        
-        # Copy files to android directory
-        cp -r android-build/* android/app/src/main/assets/ || true
-        
-        echo "Note: Full APK build requires EAS token or local setup"
-        echo "To get a token, visit: https://expo.dev/settings/access-tokens"
-        
-    - name: Create dummy APK for testing
-      run: |
-        mkdir -p apk-build
-        echo "This is a placeholder APK file. For actual build, add EXPO_TOKEN secret." > apk-build/shaqohub-placeholder.txt
-        echo "To build actual APK:" >> apk-build/shaqohub-placeholder.txt
-        echo "1. Get token from https://expo.dev/settings/access-tokens" >> apk-build/shaqohub-placeholder.txt
-        echo "2. Add it as EXPO_TOKEN secret in GitHub" >> apk-build/shaqohub-placeholder.txt
-        echo "3. Re-run this workflow" >> apk-build/shaqohub-placeholder.txt
-        
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: shaqohub-build
-        path: |
-          apk-build/
-          android-build/
-        retention-days: 7
-        
-    - name: Output instructions
-      run: |
-        echo "========================================"
-        echo "BUILD INSTRUCTIONS:"
-        echo "========================================"
-        echo "To build a real APK, you need to:"
+        echo "=============================================="
+        echo "BUILD SETUP COMPLETE"
+        echo "=============================================="
         echo ""
-        echo "1. Create an Expo account at: https://expo.dev"
-        echo "2. Get an access token from: https://expo.dev/settings/access-tokens"
-        echo "3. Add it as a GitHub secret named 'EXPO_TOKEN'"
-        echo "4. Re-run this workflow"
+        echo "To build the APK, you need to:"
         echo ""
-        echo "Alternatively, build locally with:"
-        echo "  eas build --platform android --profile preview"
+        echo "OPTION 1: Build with Expo (requires token)"
+        echo "1. Get EXPO_TOKEN from: https://expo.dev/settings/access-tokens"
+        echo "2. Add it to GitHub Secrets"
+        echo "3. Update workflow to use: expo build:android"
         echo ""
-        echo "For local development:"
-        echo "  npm install"
-        echo "  npx expo start"
-        echo "========================================"
+        echo "OPTION 2: Build locally on your machine:"
+        echo "1. Install dependencies: npm install"
+        echo "2. Install Expo CLI: npm install -g expo-cli"
+        echo "3. Login: expo login"
+        echo "4. Build: expo build:android"
+        echo ""
+        echo "OPTION 3: Use EAS Build (recommended):"
+        echo "1. Install: npm install -g eas-cli"
+        echo "2. Login: eas login"
+        echo "3. Configure: eas build:configure"
+        echo "4. Build: eas build --platform android"
+        echo "=============================================="
