--- a/.github/workflows/build-rn-apk.yml
+++ b/.github/workflows/build-rn-apk.yml
@@ -1,521 +1,40 @@
-name: 🚀 Android CI/CD Pipeline
+name: Build Android APK
 
 on:
   push:
-    branches: [main, master]
-    tags: ['v*']
-  pull_request:
-    branches: [main, master]
-  release:
-    types: [published]
+    branches:
+      - main
   workflow_dispatch:
-    inputs:
-      build_type:
-        description: 'Build type'
-        required: true
-        default: 'preview'
-        type: choice
-        options:
-        - preview
-        - production
-      platform:
-        description: 'Platform to build'
-        required: true
-        default: 'android'
-        type: choice
-        options:
-        - android
-        - ios
-        - all
-
-env:
-  NODE_VERSION: '20'
-  JAVA_VERSION: '17'
-  EXPO_CLI_VERSION: 'latest'
-  EAS_CLI_VERSION: 'latest'
-  
-  # Build Configuration
-  ANDROID_BUILD_TYPE: 'apk'
-  IOS_SIMULATOR: 'true'
-
-# Cache configuration
-cache: 
-  paths:
-    - node_modules/
-    - ~/.cache/Cypress
-    - ~/.npm
-    - ~/.expo
 
 jobs:
-  # 1. Code Quality Check
-  lint-and-test:
-    name: 🔍 Code Quality
+  build:
     runs-on: ubuntu-latest
-    if: github.event_name != 'workflow_dispatch'
-    
+
     steps:
-    - name: 📥 Checkout repository
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-        
-    - name: 🛠️ Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-        cache-dependency-path: '**/package-lock.json'
-        
-    - name: 📦 Cache dependencies
-      uses: actions/cache@v3
-      id: npm-cache
-      with:
-        path: |
-          **/node_modules
-          ~/.npm
-          ~/.cache/Cypress
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-          
-    - name: 📥 Install dependencies
-      run: |
-        npm ci --legacy-peer-deps --audit=false
-        npm list --depth=0
-        
-    - name: 🧹 ESLint
-      run: |
-        if [ -f ".eslintrc.js" ] || [ -f ".eslintrc.json" ] || [ -f ".eslintrc" ]; then
-          npx eslint . --ext .js,.jsx,.ts,.tsx --max-warnings=0
-        else
-          echo "ESLint configuration not found, skipping linting"
-        fi
-        
-    - name: 📝 TypeScript Check
-      run: |
-        if [ -f "tsconfig.json" ]; then
-          npx tsc --noEmit
-        else
-          echo "TypeScript configuration not found, skipping type check"
-        fi
-        
-  # 2. Build APK with Expo EAS
-  build-android:
-    name: 🤖 Build Android APK
-    runs-on: ubuntu-latest
-    needs: [lint-and-test]
-    
-    strategy:
-      matrix:
-        build-profile: [preview]
-        
-    steps:
-    - name: 📥 Checkout repository
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-        
-    - name: 🛠️ Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-        cache-dependency-path: '**/package-lock.json'
-        
-    - name: ⚙️ Setup Java
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: ${{ env.JAVA_VERSION }}
-        
-    - name: 📦 Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: |
-          **/node_modules
-          ~/.npm
-          ~/.expo
-        key: ${{ runner.os }}-build-${{ hashFiles('**/package-lock.json') }}
-        
-    - name: 📥 Install dependencies
-      run: |
-        npm ci --legacy-peer-deps --audit=false --prefer-offline
-        
-    - name: 🚀 Setup Expo and EAS
-      run: |
-        npm install -g eas-cli@${{ env.EAS_CLI_VERSION }}
-        npm install -g expo-cli@${{ env.EXPO_CLI_VERSION }}
-        eas --version
-        expo --version
-        
-    - name: 🔧 Configure build
-      run: |
-        # Create eas.json if not exists
-        if [ ! -f "eas.json" ]; then
-          cat > eas.json << EOF
-          {
-            "cli": {
-              "version": ">= 6.0.0",
-              "appVersionSource": "remote"
-            },
-            "build": {
-              "development": {
-                "developmentClient": true,
-                "distribution": "internal",
-                "android": {
-                  "buildType": "apk"
-                },
-                "ios": {
-                  "simulator": true
-                }
-              },
-              "preview": {
-                "distribution": "internal",
-                "android": {
-                  "buildType": "apk",
-                  "gradleCommand": ":app:assembleRelease"
-                },
-                "ios": {
-                  "simulator": true
-                }
-              },
-              "production": {
-                "autoIncrement": true,
-                "distribution": "store",
-                "android": {
-                  "buildType": "app-bundle",
-                  "gradleCommand": ":app:bundleRelease"
-                },
-                "ios": {}
-              }
-            },
-            "submit": {
-              "production": {
-                "android": {
-                  "serviceAccountKeyPath": "./google-service-account-key.json",
-                  "track": "production"
-                },
-                "ios": {
-                  "appleId": "\$APPLE_ID",
-                  "ascAppId": "\$ASC_APP_ID",
-                  "appleTeamId": "\$APPLE_TEAM_ID"
-                }
-              }
-            }
-          }
-          EOF
-          echo "Created eas.json configuration"
-        fi
-        
-        # Create app.json if not exists
-        if [ ! -f "app.json" ] && [ ! -f "app.config.js" ] && [ ! -f "app.config.ts" ]; then
-          cat > app.json << EOF
-          {
-            "expo": {
-              "name": "ShaqoHub",
-              "slug": "shaqohub",
-              "version": "1.0.0",
-              "orientation": "portrait",
-              "icon": "./assets/icon.png",
-              "userInterfaceStyle": "automatic",
-              "splash": {
-                "image": "./assets/splash.png",
-                "resizeMode": "contain",
-                "backgroundColor": "#ffffff"
-              },
-              "updates": {
-                "fallbackToCacheTimeout": 0,
-                "url": "https://u.expo.dev/\$EXPO_PROJECT_ID"
-              },
-              "assetBundlePatterns": ["**/*"],
-              "ios": {
-                "supportsTablet": true,
-                "bundleIdentifier": "com.shaqohub.app",
-                "buildNumber": "1"
-              },
-              "android": {
-                "adaptiveIcon": {
-                  "foregroundImage": "./assets/adaptive-icon.png",
-                  "backgroundColor": "#ffffff"
-                },
-                "package": "com.shaqohub.app",
-                "versionCode": 1,
-                "permissions": [
-                  "android.permission.INTERNET",
-                  "android.permission.ACCESS_NETWORK_STATE"
-                ]
-              },
-              "web": {
-                "favicon": "./assets/favicon.png"
-              },
-              "extra": {
-                "eas": {
-                  "projectId": "\$EXPO_PROJECT_ID"
-                }
-              },
-              "runtimeVersion": {
-                "policy": "appVersion"
-              },
-              "plugins": [
-                "expo-build-properties",
-                [
-                  "expo-splash-screen",
-                  {
-                    "backgroundColor": "#ffffff",
-                    "resizeMode": "contain",
-                    "image": "./assets/splash.png"
-                  }
-                ]
-              ]
-            }
-          }
-          EOF
-          echo "Created app.json configuration"
-        fi
-        
-    - name: 🔐 Login to Expo
-      run: |
-        if [ -n "\${{ secrets.EXPO_TOKEN }}" ]; then
-          echo "Logging into Expo with token..."
-          eas login --token \${{ secrets.EXPO_TOKEN }}
-        else
-          echo "EXPO_TOKEN not found. Please add it to GitHub Secrets."
-          echo "You can get it from: https://expo.dev/settings/access-tokens"
-          exit 1
-        fi
-        
-    - name: 📱 Build Android APK
-      id: build
-      run: |
-        echo "Starting Android APK build..."
-        
-        # Determine build profile
-        BUILD_PROFILE="${{ matrix.build-profile }}"
-        
-        if [ "${{ github.event_name }}" == "release" ]; then
-          BUILD_PROFILE="production"
-        elif [ "${{ github.event.inputs.build_type }}" != "" ]; then
-          BUILD_PROFILE="${{ github.event.inputs.build_type }}"
-        fi
-        
-        echo "Using build profile: $BUILD_PROFILE"
-        
-        # Run EAS Build
-        eas build \
-          --platform android \
-          --profile $BUILD_PROFILE \
-          --non-interactive \
-          --wait \
-          --json > build-output.json
-        
-        # Parse build output
-        BUILD_ID=$(cat build-output.json | jq -r '.id')
-        BUILD_STATUS=$(cat build-output.json | jq -r '.status')
-        ARTIFACT_URL=$(cat build-output.json | jq -r '.artifacts.buildUrl // empty')
-        
-        echo "Build ID: $BUILD_ID"
-        echo "Build Status: $BUILD_STATUS"
-        echo "Artifact URL: $ARTIFACT_URL"
-        
-        # Set outputs for next steps
-        echo "build_id=$BUILD_ID" >> $GITHUB_OUTPUT
-        echo "build_status=$BUILD_STATUS" >> $GITHUB_OUTPUT
-        echo "artifact_url=$ARTIFACT_URL" >> $GITHUB_OUTPUT
-        
-    - name: 📥 Download APK
-      if: steps.build.outputs.artifact_url != ''
-      run: |
-        echo "Downloading APK from: ${{ steps.build.outputs.artifact_url }}"
-        curl -L "${{ steps.build.outputs.artifact_url }}" -o shaqohub-${{ github.sha }}.apk
-        
-        # Get file info
-        APK_SIZE=$(stat -f%z "shaqohub-${{ github.sha }}.apk" 2>/dev/null || stat -c%s "shaqohub-${{ github.sha }}.apk")
-        echo "APK Size: $(($APK_SIZE / 1024 / 1024))MB"
-        
-    - name: 🏷️ Tag build with version
-      if: steps.build.outputs.build_status == 'FINISHED'
-      run: |
-        # Extract version from app.json
-        VERSION=$(node -e "console.log(require('./app.json').expo.version)")
-        echo "App Version: $VERSION"
-        
-        # Create version file
-        echo "{\"version\":\"$VERSION\",\"build\":\"${{ github.sha }}\",\"date\":\"$(date -Iseconds)\"}" > build-info.json
-        
-        # Rename APK with version
-        if [ -f "shaqohub-${{ github.sha }}.apk" ]; then
-          mv "shaqohub-${{ github.sha }}.apk" "shaqohub-v$VERSION-${{ github.sha:0:8 }}.apk"
-        fi
-        
-    - name: 📤 Upload APK artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: shaqohub-apk
-        path: |
-          *.apk
-          build-info.json
-        retention-days: 30
-        if-no-files-found: error
-        
-    - name: 📊 Upload build logs
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: build-logs
-        path: |
-          build-output.json
-          eas-build.log
-        retention-days: 7
-        
-  # 3. Deploy to GitHub Release
-  create-release:
-    name: 🚀 Create GitHub Release
-    needs: [build-android]
-    if: github.event_name == 'release' || github.event_name == 'workflow_dispatch'
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: 📥 Download APK artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: shaqohub-apk
-        path: ./artifacts
-        
-    - name: 🏷️ Get version
-      id: get_version
-      run: |
-        if [ "${{ github.event_name }}" == "release" ]; then
-          VERSION="${{ github.event.release.tag_name }}"
-        else
-          VERSION=$(node -e "console.log(require('./app.json').expo.version)")
-          VERSION="v$VERSION-$(date +%Y%m%d)"
-        fi
-        echo "version=$VERSION" >> $GITHUB_OUTPUT
-        
-    - name: 🚀 Create Release
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: ${{ steps.get_version.outputs.version }}
-        name: ShaqoHub ${{ steps.get_version.outputs.version }}
-        body: |
-          ## 🚀 ShaqoHub Android APK
-          
-          **Build Information:**
-          - Commit: ${{ github.sha }}
-          - Branch: ${{ github.ref_name }}
-          - Build Date: $(date -u +"%Y-%m-%d %H:%M:%S UTC")
-          
-          **Installation:**
-          1. Download the APK file
-          2. Enable "Install from unknown sources" in Android settings
-          3. Install the APK
-          
-          **Changes:**
-          ${{ github.event.head_commit.message }}
-          
-          **Build Artifacts:**
-          - APK: shaqohub-${{ steps.get_version.outputs.version }}.apk
-          
-          **Checksum:**
-          ```bash
-          sha256sum shaqohub-*.apk
-          ```
-        draft: false
-        prerelease: ${{ contains(github.ref, 'beta') || contains(github.ref, 'alpha') }}
-        files: |
-          artifacts/*.apk
-          artifacts/build-info.json
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
-  # 4. Notify Team
-  notify:
-    name: 📢 Notify Team
-    needs: [build-android]
-    if: always()
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: 📊 Build Status
-      id: build_status
-      run: |
-        if [ "${{ needs.build-android.result }}" == "success" ]; then
-          echo "status=✅ Build Successful" >> $GITHUB_OUTPUT
-          echo "color=good" >> $GITHUB_OUTPUT
-        elif [ "${{ needs.build-android.result }}" == "failure" ]; then
-          echo "status=❌ Build Failed" >> $GITHUB_OUTPUT
-          echo "color=danger" >> $GITHUB_OUTPUT
-        else
-          echo "status=⚠️ Build Cancelled" >> $GITHUB_OUTPUT
-          echo "color=warning" >> $GITHUB_OUTPUT
-        fi
-        
-    - name: 📨 Send Slack Notification
-      uses: slackapi/slack-github-action@v1.24.0
-      if: always() && github.event_name != 'pull_request'
-      with:
-        payload: |
-          {
-            "text": "${{ steps.build_status.outputs.status }} - ShaqoHub Android Build",
-            "blocks": [
-              {
-                "type": "header",
-                "text": {
-                  "type": "plain_text",
-                  "text": "${{ steps.build_status.outputs.status }}"
-                }
-              },
-              {
-                "type": "section",
-                "fields": [
-                  {
-                    "type": "mrkdwn",
-                    "text": "*Repository:*\n${{ github.repository }}"
-                  },
-                  {
-                    "type": "mrkdwn",
-                    "text": "*Branch:*\n${{ github.ref_name }}"
-                  },
-                  {
-                    "type": "mrkdwn",
-                    "text": "*Commit:*\n${{ github.sha }}"
-                  },
-                  {
-                    "type": "mrkdwn",
-                    "text": "*Triggered by:*\n${{ github.actor }}"
-                  }
-                ]
-              },
-              {
-                "type": "section",
-                "text": {
-                  "type": "mrkdwn",
-                  "text": "*Workflow:* <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|View Build>"
-                }
-              }
-            ]
-          }
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        
-    - name: 📧 Send Email Notification
-      uses: dawidd6/action-send-mail@v3
-      if: always() && github.event_name == 'release'
-      with:
-        server_address: smtp.gmail.com
-        server_port: 465
-        username: ${{ secrets.EMAIL_USERNAME }}
-        password: ${{ secrets.EMAIL_PASSWORD }}
-        subject: "🚀 ShaqoHub ${{ github.event.release.tag_name }} Released"
-        to: ${{ secrets.RELEASE_NOTIFICATION_EMAIL }}
-        from: ShaqoHub CI <ci@shaqohub.com>
-        body: |
-          A new version of ShaqoHub has been released!
-          
-          Version: ${{ github.event.release.tag_name }}
-          Release Notes: ${{ github.event.release.body }}
-          
-          Download: ${{ github.event.release.html_url }}
-          
-          Built by: ${{ github.actor }}
-          Build Time: $(date)
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: npm
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Install Expo CLI
+        run: npm install -g expo-cli
+
+      - name: Login to Expo (anonymous)
+        run: npx expo whoami || true
+
+      - name: Build APK (Expo Classic)
+        run: npx expo build:android -t apk --non-interactive
+
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: shaqohub-apk
+          path: |
+            **/*.apk
