--- a/.github/workflows/build-rn-apk.yml
+++ b/.github/workflows/build-rn-apk.yml
@@ -1,4 +1,4 @@
-name: Build Android APK
+name: Build Android APK (EAS)
 
 on:
   push:
@@ -21,8 +21,10 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Install Expo CLI
-        run: npm install -g expo-cli
+      - name: Install EAS CLI
+        run: npm install -g eas-cli
 
-      - name: Build APK
-        run: npx expo build:android -t apk --non-interactive
+      - name: Build APK with EAS
+        env:
+          CI: 1
+        run: eas build -p android --profile preview --non-interactive
